# WorldQuant-Alpha-Research

./: .env.local.example  .gitignore  Dockerfile  README.md  credentials.json.example  docker-compose.yml  main_simulation.py  main_ui.py  pyproject.toml
alpha/: alpha_tracking_sample.csv
config/log_config/: log_config.yaml
src/alpha_template/: operator_registry.py
src/alpha_template/operators/: __init__.py  arithmetic_operators.py  cross_sectional_operators.py  group_operators.py  logical_operators.py  time_series_operators.py  transformational_operators.py  vector_operators.py
src/core/: wq_alpha_analysis.py  wq_alpha_generator.py  wq_formula.py  wq_mcts_alpha.py  wq_result_extract.py  wq_session_core.py  wq_simulation.py
src/data_prep/: alpha_tracker.py
src/ui/: alpha_tracker_editing_ui.py
src/utilities/: log_cus_handler.py  logger.py  parameters.py
