[project]
name = "WorldQuant-Alpha-Research"
version = "0.1.0"
description = ""
authors = [
    {name = "Harvey Xie",email = "harvey.xie06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "filelock (>=3.18.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
