[tool.poetry]
name = "WorldQuant-Alpha-Research"
version = "0.1.0"
description = ""
authors = ["Harvey Xie <harvey.xie06@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.2.5,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
requests = ">=2.32.3,<3.0.0"
filelock = ">=3.18.0,<4.0.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"
streamlit = "^1.45.1"
notebook = "^7.4.3"
sympy = "^1.14.0"
networkx = "^3.5"

[tool.poetry.group.dev.dependencies]
notebook = ">=7.4.2,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"